# netfuzzlib

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE-MIT  README.md
modules/module-afl/: CMakeLists.txt  afl-denylist  module-afl-config.c  module-afl-config.h  module-afl.c  module-afl.h  wait-child.c  wait-child.h
modules/module-hello-world/: CMakeLists.txt  module.c
src/: CMakeLists.txt  callback_wrapper.c  callback_wrapper.h  init.c
src/core/: addr.c  addr.h  core.c  core.h  dgram.c  dgram.h  dup.c  epoll.c  epoll.h  fd_table.c  fd_table.h  getifaddrs.c  getifaddrs.h  handlers.h  import_host.c  import_host.h  interfaces.c  interfaces.h  ioctl.c  ioctl.h  libnl.c  libnl.h  log.c  network_env.c  network_env.h  network_types.h  poll.c  recv_buffer.c  recv_buffer.h  resolver.c  resolver.h  routing.c  routing.h  rtnetlink.c  rtnetlink.h  sockopt.c  sockopt.h  stdio.c  stream.c  stream.h
src/environment/: fd_table.c  fd_table.h  getifaddrs.c  import_host.c  import_host.h  interfaces.c  interfaces.h  ioctl.c  network_env.c  network_env.h  routing.c  routing.h  util.c
src/hooks/: hooks-poll.c  hooks-stdio.c  hooks.c  hooks.h  models.h  module-wrapper.c  native-libc.c  native-syscalls-x86-64.c  native.h
src/interceptors/: interceptors.c  interceptors.h  io_uring.c  native.c  native.h  poll.c  stdio.c
src/lib/libnl/: libnl.c  libnl.h
src/lib/logger/: log.c
src/sockets/: dup.c  network_types.h  poll.c  sockets.c  sockets.h  sockets_dgram.c  sockets_dgram.h  sockets_rtnetlink.c  sockets_rtnetlink.h  sockets_stream.c  sockets_stream.h  sockets_util.c  sockets_util.h  sockopt.c  stdio.c
test/: CMakeLists.txt
test/common/: test_helpers.cpp  test_helpers.h  test_mode.h
test/config/: CMakeLists.txt  icmp.conf  ioctl1.conf  network.conf  routing-gateway.conf  rtnetlink-multiple-interfaces.conf  single_udp_packet.pcap  tcp1.conf  tcp2.conf  udp.conf  udp2.conf
test/environment/ioctl/: ioctl1.cpp
test/environment/others/: dup.cpp  others.cpp  stdio.cpp
test/environment/routing/: routing.cpp
test/environment/rtnetlink/getaddr/: rtnetlink_getaddr_filter.cpp  rtnetlink_getaddr_no_filter.cpp  rtnetlink_getaddr_single_interface.cpp
test/environment/rtnetlink/getlink/: rtnetlink_getlink_all_devices.cpp  rtnetlink_getlink_single_device_filter.cpp  rtnetlink_getlink_single_device_no_filter.cpp  rtnetlink_getlink_test_helper.cpp  rtnetlink_getlink_test_helper.h
test/icmp/ipv6/: icmpv6.cpp
test/integration/: CMakeLists.txt
test/integration/cases/: run_case.sh
test/integration/cases/ifconfig_show/: cmd  stdout.expected
test/integration/cases/ip_show/: cmd  stdout.expected
test/integration/cases/nc_tcp_connect/: cmd  scenario.txt
test/integration/cases/nc_tcp_listener/: cmd  scenario.txt
test/integration/cases/nc_udp_receiver/: cmd  scenario.txt
test/integration/cases/nc_udp_sender/: cmd  scenario.txt
test/integration/cases/telnet_connect/: cmd  scenario.txt  stdout.expected
test/integration/docker/: CMakeLists.txt  Dockerfile.base  nfl-entrypoint.sh  run-target.sh
test/integration/docker/afl-curl/: Dockerfile  run.sh
test/integration/docker/afl-curl/seeds/: response
test/integration/docker/afl-dnsmasq/: Dockerfile  run.sh
test/integration/docker/afl-fork/: Dockerfile  run.sh
test/integration/docker/afl-fork/src/: tcp_fork_server.c
test/integration/docker/afl-real/: Dockerfile  run.sh
test/integration/docker/afl-real/src/: afl_target.c
test/integration/docker/afl-redis/: Dockerfile  run.sh
test/integration/docker/afl-redis/seeds/: ping
test/integration/docker/bftpd/: Dockerfile  run.sh
test/integration/docker/curl/: Dockerfile  run.sh
test/integration/docker/dnsmasq/: Dockerfile  run.sh
test/integration/docker/exim/: Dockerfile  run.sh
test/integration/docker/java-http/: Dockerfile  run.sh
test/integration/docker/kamailio/: Dockerfile  run.sh
test/integration/docker/libafl-dnsmasq/: Dockerfile  run.sh
test/integration/docker/libafl-dnsmasq/seeds/: query
test/integration/docker/libcoap/: Dockerfile  run.sh
test/integration/docker/lightftp/: Dockerfile  run.sh
test/integration/docker/lighttpd/: Dockerfile  run.sh
test/integration/docker/live555/: Dockerfile  run.sh
test/integration/docker/memcached/: Dockerfile  run.sh
test/integration/docker/mosquitto/: Dockerfile  run.sh
test/integration/docker/openssl/: Dockerfile  run.sh
test/integration/docker/proftpd/: Dockerfile  run.sh
test/integration/docker/programs/: Dockerfile  run.sh
test/integration/docker/programs/scenarios/: http_get.txt  (+1 more)
test/integration/docker/pure-ftpd/: Dockerfile  docker-args  run.sh
test/integration/docker/python-http/: Dockerfile  run.sh
test/integration/docker/redis/: Dockerfile  run.sh
test/integration/docker/rsync/: Dockerfile  run.sh
test/integration/docker/rsyslog/: Dockerfile  run.sh
test/integration/docker/rust-http/: Dockerfile  run.sh
test/integration/docker/snmpd/: Dockerfile  run.sh
test/integration/docker/ssh-keyscan/: Dockerfile  capture.sh  capture_proxy.py  host_ed25519.pub  run.sh
test/integration/docker/tinydtls/: Dockerfile  run.sh
test/integration/docker/tinydtls-client/: Dockerfile  run.sh
test/module-pcap/: pcap.cpp
test/modules/: CMakeLists.txt  module-bridge-kernel.c  module-replay.c  module-test-scripted.c  module-test.c
test/tcp/: tcp-poll.cpp  tcp1.cpp
test/udp/: udp1.cpp  udp2.cpp  udp_connect.cpp
test/udp/ipv4/: CMakeLists.txt  udp-ipv4-accept.cpp  udp-ipv4-bind.cpp  udp-ipv4-connect.cpp  udp-ipv4-others.cpp  udp-ipv4-pair.cpp  udp-ipv4-send.cpp  udp-ipv4-shutdown.cpp  udp-ipv4-trio.cpp  udp-ipv4.h
test/unit/: bind_test.cpp  close_test.cpp  connect_test.cpp  dup_test.cpp  epoll_semantics_test.cpp  epoll_test.cpp  fcntl_test.cpp  fd_pool_test.cpp  getifaddrs_test.cpp  import_host_test.cpp  infra_test.cpp  ioctl_test.cpp  listen_accept_test.cpp  liveness_test.cpp  netlink_test.cpp  poll_select_test.cpp  resolver_test.cpp  routing_test.cpp  shutdown_test.cpp  socket_test.cpp  sockopt_test.cpp  stdio_test.cpp  tcp_io_test.cpp  udp_io_test.cpp  util_test.cpp
(+33 files in other folders)
